--- a/source/backend/lambda_functions/lambda_ssm_socket/requirements.txt
+++ b/source/backend/lambda_functions/lambda_ssm_socket/requirements.txt
@@ -1,2 +1,3 @@
 # Removed from package as will use Lambda provided boto client last tested version was : boto3==1.17.96
-python-jose==3.3.0
+PyJWT==2.8.0
+PyJWT[crypto]==2.8.0
