--- a/source/backend/lambda_unit_test/requirements.txt
+++ b/source/backend/lambda_unit_test/requirements.txt
@@ -1,7 +1,8 @@
 requests==2.31.0
 python-jose==3.3.0
+python-jose[cryptography]==3.3.0
 simplejson==3.19.2
-boto3==1.33.11
+boto3==1.34.28
 moto==4.2.0
 coverage==7.3.0
 troposphere==4.5.3
@@ -9,3 +10,5 @@ PyYAML==6.0.1
 pyparsing==3.0.9
 docker==6.1.3
 aws-lambda-powertools[aws-sdk]~=2.23.1
+PyJWT==2.8.0
+PyJWT[crypto]==2.8.0
