--- a/source/backend/lambda_layers/lambda_layer_policy/python/requirements.txt
+++ b/source/backend/lambda_layers/lambda_layer_policy/python/requirements.txt
@@ -1,4 +1,5 @@
 # Removed from package as will use Lambda provided boto client last tested version was : boto3==1.17.96
+urllib3<2.1.0
 requests==2.31.0
 PyJWT==2.8.0
 PyJWT[crypto]==2.8.0
