Updated to version 4.0.1, see CHANGELOG.md for details.

--- a/deployment/CFN-templates/aws-cloud-migration-factory-solution-target-account.template
+++ b/deployment/CFN-templates/aws-cloud-migration-factory-solution-target-account.template
@@ -140,6 +140,10 @@ Resources:
                   - 'mgn:UntagResource'
                   - 'mgn:Update*'
                   - 'mgn:Batch*'
+                  - 'mgn:StartReplication'
+                  - 'mgn:StopReplication'
+                  - 'mgn:PauseReplication'
+                  - 'mgn:ResumeReplication'
                 Resource: '*'
               - Effect: Allow
                 Action:
