--- a/deployment/CFN-templates/aws-cloud-migration-factory-solution-target-account.template
+++ b/deployment/CFN-templates/aws-cloud-migration-factory-solution-target-account.template
@@ -318,6 +318,7 @@ Resources:
                   - 'arn:aws:ec2:*:*:volume/*'
                   - 'arn:aws:ec2:*:*:snapshot/*'
                   - 'arn:aws:ec2:*:*:instance/*'
+                  - 'arn:aws:ec2:*:*:network-interface/*'
                 Condition:
                   StringEquals:
                     'ec2:CreateAction':
@@ -530,6 +531,7 @@ Resources:
                   - 'arn:aws:ec2:*:*:volume/*'
                   - 'arn:aws:ec2:*:*:snapshot/*'
                   - 'arn:aws:ec2:*:*:instance/*'
+                  - 'arn:aws:ec2:*:*:network-interface/*'
                 Condition:
                   StringEquals:
                     'ec2:CreateAction':
