--- a/source/backend/lambda_functions/lambda_gfbuild/pyproject.toml
+++ b/source/backend/lambda_functions/lambda_gfbuild/pyproject.toml
@@ -4,7 +4,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-troposphere = "^4.5.3"
+troposphere = "==4.9.0"
 
 [build-system]
 requires = ["poetry-core"]
