--- a/source/backend/lambda_functions/lambda_ssm_socket/pyproject.toml
+++ b/source/backend/lambda_functions/lambda_ssm_socket/pyproject.toml
@@ -4,7 +4,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-PyJWT= "^2.8.0"
+PyJWT= "2.10.1"
 
 [build-system]
 requires = ["poetry-core"]
