--- a/source/backend/lambda_layers/lambda_layer_py_pkgs/python/pyproject.toml
+++ b/source/backend/lambda_layers/lambda_layer_py_pkgs/python/pyproject.toml
@@ -4,13 +4,13 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-urllib3 = ">=2.2.2"
+urllib3 = ">=2.3.0"
 requests = "==2.32.3"
-simplejson = "==3.19.2"
-boto3 = "^1.35.46"
-botocore = "^1.35.46"
-aws-lambda-powertools = "~=2.40.1"
-mypy-boto3-dynamodb = ">=1.35.0"
+simplejson = "==3.20.1"
+boto3 = "^1.37.6"
+botocore = "^1.37.6"
+aws-lambda-powertools = ">=3.7.0"
+mypy-boto3-dynamodb = ">=1.37.0"
 
 [build-system]
 requires = ["poetry-core"]
