--- a/source/backend/lambda_unit_test/pyproject.toml
+++ b/source/backend/lambda_unit_test/pyproject.toml
@@ -4,21 +4,21 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-urllib3 = ">2.2.2"
+urllib3 = ">=2.3.0"
 requests = "==2.32.3"
-simplejson = "==3.19.2"
-boto3 = "^1.35.46"
-botocore = "^1.35.46"
-moto = "==5.0.10"
-coverage = "==7.5.4"
-troposphere = "==4.8.1"
-PyYAML = "==6.0.1"
-pyparsing = "==3.1.2"
+simplejson = "==3.20.1"
+boto3 = "^1.37.6"
+botocore = "^1.37.6"
+moto = "==5.1.1"
+coverage = "==7.6.12"
+troposphere = "==4.9.0"
+PyYAML = "==6.0.2"
+pyparsing = "==3.2.1"
 docker = "==7.1.0"
-aws-lambda-powertools = {extras = ["aws-sdk"], version = "~=2.40.1"}
-PyJWT = {extras = ["crypto"], version = "2.8.0"}
-joserfc = "~=0.12.0"
-mypy-boto3-dynamodb = ">=1.35.0"
+aws-lambda-powertools = {extras = ["aws-sdk"], version = ">=3.7.0"}
+PyJWT = {extras = ["crypto"], version = "2.10.1"}
+joserfc = "~=1.0.4"
+mypy-boto3-dynamodb = ">=1.37.0"
 
 [tool.poetry.group.dev.dependencies]
 
