Updated to 4.5.0, see CHANGELOG.md for details

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ ehthumbs.db
 # Local build output
 /deployment/global-s3-assets/*
 /deployment/regional-s3-assets/*
-/deployment/open-source
+/deployment/open-source/*
 /source/backend/lambda_layers/lambda_layer_py_pkgs/.build
 .temp_redpencil
 open-source
@@ -39,6 +39,8 @@ bom.json
 
 # Testing environment
 testing-venv
+source/integrations/integration_unit_tests/.coverage*
+.temp_redpencil
 
 **/**/.coverage
 **/**/coverage/
